# flamerite_bt

./: .flake8  LICENSE  README.md  cli.py  pyproject.toml
.github/workflows/: publish.yml  push.yml
src/flamerite_bt/: const.py  device.py  scanner.py  state.py
src/nitraflame_bt/: const.py  device.py  scanner.py  state.py
tests/: test_device.py  test_scanner.py  test_state.py
