[project]
name = "nitraflame_bt"
version = "0.1.0"
description = "Control NITRAFlame fireplace devices over bluetooth"
authors = [
    {name = "Achilleas Anagnostopoulos",email = "achilleas.imap.mbox@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "bleak (>=2.1.0,<3.0.0)",
    "bleak-retry-connector (>=4.4.4,<5.0.0)",
    "aioconsole (>=0.8.2,<0.9.0)"
]

[tool.poetry]
packages = [{include = "nitraflame_bt", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
