[project]
name = "flamerite_bt"
description = "An unofficial python package for controlling Flamerite fireplace devices via bluetooth"
authors = [
    {name = "Achilleas Anagnostopoulos",email = "achilleas.imap.mbox@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "bleak >=0.15.1",
    "bleak-retry-connector (>=4.0.0,<5.0.0)",
    "aioconsole >=0.4.1"
]
dynamic = ["version"]

[tool.poetry]
packages = [{include = "flamerite_bt", from = "src"}]
version = "0.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-subtests = "^0.15.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
poetry-dynamic-versioning = "^1.9.1"
ruff = "^0.14.10"
isort = "^7.0.0"
bandit = "^1.9.2"
flake8 = "^7.3.0"
black = "^25.12.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
bump = false
enable = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
"""

[tool.isort]
profile = "black"
skip = [".poetry"]

[tool.black]
line-length = 80

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
asyncio_mode = 'auto'
